--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset= 'Ute-8'>
+<meta http- equiv=x-ua-compatiblecontent=íe=ealy>
+<title>título da aba </title>
+<meta name= viewport content =width =device- width,initial - scale=1>
+<link rel= style.css>
+<script src = main .js >< / script>
+</head>
+<body>.
+<header><p>< img     id="TÍTULOIMAGEM"src="logo.jpeg"
+    alt="DESCRICAO IMAGEM" ></p>
+    <nav>
+        <ul id=" "Lista01"
+        <li ><a target= blank" href= "index.html" >Home</a>li>
+            <li><a target= "blank" 
+                href= "https://www.conultaescola.pr.gov.br/"> Site do Colégio</li>
+                <li>< a target = "blank"
+                    href
